--- a/content/posts/2018-12-03-röportaf.md
+++ b/content/posts/2018-12-03-röportaf.md
@@ -3,16 +3,14 @@ title: TAF Network ekibiyle Youtube röportajı
 author: İsmail Bekar
 date: '2018-09-03'
 slug: röportaf
-categories:
-  - akademi
 tags:
-  - röportaj
   - İsviçre
   - burs
   - doktora
 comments: no
 showcomments: yes
 showpagemeta: yes
+disqus: false
 ---
 
 TAF Network ekibi ile yurt dışındaki bilim insanlarıyla gerçekleştirdikleri söyleşi zinciri kapsamında bir röportaj gerçekleştirdik.
