--- a/content/posts/2018-12-03-burs.md
+++ b/content/posts/2018-12-03-burs.md
@@ -11,13 +11,14 @@ tags:
 comments: no
 showcomments: yes
 showpagemeta: yes
+disqus: false
 ---
 
-Türkçe çevirisi düzgün oldu mu bilmiyorum ama orjinal adı **Swiss Government Excellence Scholarship**. Yaklaşık bir sene önce bu bursla İsviçre’ye gelip doktoraya başladım. Sonrasında tanıdık tanımadık bir çok insana bursla ilgili sorularını cevaplayıp, bilgi verdim ve en sonunda rehberimsi bir şey hazırlamanın faydalı olacağına karar verdim.
+Bu blog gönderisi İngilizce ismi **Swiss Government Excellence Scholarship** olan ve benim İsviçre Hükümeti Mükemmeliyet Bursu diye Türkçe'ye çevirdiğim burs programına ait bilgileri içeriyor. Ben 2016 yılında bu bursu kazanıp, İsviçre ETH Zürich'de doktoraya başladım. Sonrasında tanıdığım ya da tanımadığım bir çok insandan bursla ilgili soruları cevapladım ve bursa başvurmalarını önerdim. En sonunda bursla ilgili bir gönderi hazırlamanın faydalı olacağına karar verdim.
 
-Başlamadan önce küçük bir uyarı: bu bilgilerin hepsi benim bursu kazandığım 2016 yılına ait. Yeni başvurular Eylül ayında başlayacak ve yeni bilgileri yayınladığında bazı değişiklikler olabilir.
+Başlamadan önce küçük bir uyarı: bu bilgilerin hepsi benim bursu kazandığım 2016 yılına ait. Yeni başvurular Eylül ayında başlayacak ve yeni bilgileri yayınladığında bazı değişiklikler olabilir. 
 
-Eğer yazdıklarım dışında sorunuz olursa Twitter ya da mail aracılığıyla sorarsanız cevabı buraya ekleyebilirim.
+Eğer burada yazdıklarım dışında bir sorunuz olursa bana Twitter ya da mail aracılığıyla ulaşırsanız elimden geldiğince yardımcı olmaya çalışırım.
 
 
 **Bursu kim veriyor?**
@@ -28,17 +29,17 @@ Eğer yazdıklarım dışında sorunuz olursa Twitter ya da mail aracılığıyl
 
 Üç seviyede veriliyor. 
 
-Doktora için verilen burs 3 yıl ama doğrudan 3 yıl deği, 1+1+1 şeklinde ve her sene sonunda uzatılıyor. Uzatılma kararı hocanıza bağlı. Yani ilk senenin sonunda hocanız performansınızı beğenmezse bursun geri kalanını alamayabilirsiniz. 
+Doktora için verilen burs üüç yıl fakat doğrudan üç yıl değil, 1+1+1 şeklinde ve her sene sonunda uzatılıyor. Uzatma kararı hocanıza bağlı. Yani ilk senenin sonunda hocanız performansınızı beğenmezse bursun geri kalanını alamayabilirsiniz fakat bu genelde sadece formalite olarak kalıyor. 
 
-İkinci burs yine doktora için ama sadece 1 yıllık değişim gibi ve önemli nokta bu bursun uzatılma ihtimali yok.
+İkinci burs yine doktora için ama sadece bir yıllık bir değişim programı gibi. Önemli olan nokta bu bursun uzatılma ihtimalinin olmaması.
 
-Üçüncü burs ise doktora sonrası araştırmacı pozisyonu için ve yine 1 yıllık. Değişim bursundaki gibi bu bursunda uzatılma ihtimali yok.
+Üçüncü burs ise doktora sonrası araştırmacı pozisyonu için ve yine bir yıllık. Değişim bursundaki gibi bu bursunda uzatılma ihtimali yok.
 
-Hangisine başvuracağınızı siz seçiyorsunuz ve sonradan değiştirme gibi bir ihtimal yok. O yüzden özellikle doktoraya mı yoksa doktora değişim bursuna mı başvuracağınızı iyi düşünün derim. Toplamda 180 ülkede verilen burs, Türkiye için sadece 3 kişiye (1+1+1) veriliyor.
+Hangisine başvuracağınızı siz seçiyorsunuz ve sonradan değiştirme gibi bir ihtimal yok. O yüzden özellikle doktoraya mı yoksa doktora değişim bursuna mı başvuracağınızı iyi düşünün derim. Toplamda 180 ülkede verilen burs, Türkiye için sadece üç kişiye (1+1+1) veriliyor.
 
 **Bursun kapsamı nedir?**
 
-Burs temel olarak aylık 1920 İsviçre Frangı, sağlık sigortası, sadece ilk yıl için geçerli ulaşım indirim kartından oluşuyor ve sadece bir kez olmak üzere İsviçre’ye geldiğinizde verilen ekstra 300 franktan oluşuyor.
+Burs temel olarak aylık 1920 İsviçre Frangı, sağlık sigortası, sadece ilk yıl için geçerli ulaşım indirim kartından ve sadece bir kez olmak üzere İsviçre’ye geldiğinizde yerleşme masrafları için verilen 300 franktan oluşuyor.
 
 Bunların yanında diğer burs kazananlarla birlikte bir çok etkinliğe, organizasyona davetli oluyorsunuz. Bunlar akşam yemeği de olabiliyor, ünlü bir yazarın konuşması, doğa gezileri ya da balo gibi etkinlikler.
 
@@ -48,15 +49,15 @@ Bunların yanında diğer burs kazananlarla birlikte bir çok etkinliğe, organi
 
 **Hangi kriterler önemli?**
 
-En önemli kriter yazdığınız proje. Bursun amaçlarından biri iki ülke arasında köprüler kurup, iş birlikleri yaratmak. Proje taslağında geldiğiniz ve gideceğiniz enstitülerin kazançları başlıklı bir bölüm var ve burada sizin İsviçre’ye gelmenizden Türkiye ve İsviçre’deki enstitülerin ne kazanacağını anlatmalısınız. Bana göre burası başvurudaki en önemli kriter. Bunun dışında öz geçmişiniz de önemli tabi. 
+En önemli kriter yazdığınız proje. Bursun amaçlarından biri iki ülke arasında köprüler kurup, iş birlikleri yaratmak. Proje taslağında geldiğiniz ve gideceğiniz enstitülerin kazançları başlıklı bir bölüm var ve burada sizin İsviçre’ye gelmenizden Türkiye ve İsviçre’deki enstitülerin ne kazanacağını anlatmalısınız. Bana göre burası başvurudaki en önemli kriter.
 
 **Bu bilgilerin dışında genel bazı yorumlarım:**
 
-* Sanırım en çok merak edilen şeyler arasında verdikleri paranın yetip yetmediğini sorusu vardır. Eğer çok yüksek yaşam standartlarınız yok ve öğrenci hali nedir biliyorsanız rahat bir şekilde yeter. Hatta biraz dişinizi sıkarsanız birikim bile yapabilirsiniz. Fakat alacağınız para standart bir doktora öğrencisi maaşının neredeyse yarısı. Eğer profesörünüzün gönlü sadece bu parayla geçinmenize el vermiyorsa size maaş vererek alacağınız toplam ücreti doktora öğrencisi maaşına çekebilir. Gönlü el vermiyorsa dedim çünkü bu tamamen hocanıza bağlı.
+* Sanırım en çok merak edilen şeyler arasında verdikleri paranın yetip yetmediğini sorusu vardır. Eğer çok yüksek yaşam standartlarınız yok ve öğrenci hali nedir biliyorsanız rahat bir şekilde yeter. Hatta biraz dişinizi sıkarsanız birikim bile yapabilirsiniz. Fakat alacağınız para standart bir doktora öğrencisi maaşının neredeyse yarısı. Eğer profesörünüzün gönlü sadece bu parayla geçinmenize el vermiyorsa size ekstra ödeme yaparak alacağınız toplam maaşı standart doktora öğrencisi maaşına çekebilir. Gönlü el vermiyorsa dedim çünkü bu tamamen hocanıza bağlı.
 
-* İngilizce ya da Almanca dil yeterlilik belgesi istenmiyor. Hocanızla konuşup, anlaşabildiğiniz ve projeyi yazabilmeniz önemli. Yeterlilik belgesi diye bir şeye gerek yok. Fakat bu bursa başvuru için geçerli eğer başvurduğunuz okul isterse onu bilemem. Benim durumumda ETH Zurich istememişti (Zürih Üniversitesi de istemiyor). Bunun yanında Almanca biliyorsanız harika olur. Yok bilmiyorsanız, eğer bursu kazanırsanız ve eğer imkanınız varsa gelmeden önce kesinlikle Almanca öğrenmeye başlayın. İmkanınız varsa diyorum çünkü imkanınız yoksa para verip kursa yazılmayın. Buraya geldiğinizde bursun ayrıcalıklarından biri olarak dönem başına bir Almanca kursu ücretiniz karşılanıyor.
+* İngilizce ya da Almanca dil yeterlilik belgesi istenmiyor. Hocanızla konuşup, anlaşabildiğiniz ve projeyi yazabilmeniz önemli. Yeterlilik belgesi diye bir şeye gerek yok. Fakat bu bursa başvuru için geçerli eğer başvurduğunuz okul isterse onu bilemem. Benim durumumda ETH Zurich istememişti (Zürih Üniversitesi de istemiyor). Bunun yanında Almanca biliyorsanız harika olur. Yok bilmiyorsanız, eğer bursu kazanırsanız ve imkanınız varsa gelmeden önce kesinlikle Almanca öğrenmeye başlayın. İmkanınız varsa diyorum çünkü imkanınız yoksa para verip kursa yazılmayın. Buraya geldiğinizde bursun ayrıcalıklarından biri olarak dönem başına bir Almanca kursu ücretiniz karşılanıyor.
 
-* Bursla gelmenin bir çok avantajı var. Örneğin; ilk sene neredeyse bütün burs sahiplerine ev ayarlandı. Normalde evinizi kendiniz bulmanız gerekli ve İsviçre’de uygun fiyata düzgün bir ev bulmak biraz zor olabiliyor. Üstelik tamamen yabancı, Almanca konuşulan bir ülkede yol yordam bilmeden ev aramak nasıl bir işkencedir tahmin etmeye çalışın. Bu arada ev diyorum ama tek bir odayı kastediyorum. İsviçre’de konut kiraları çok yüksek ve bu yüzden öğrenciler hatta bir çok çalışan insan ev paylaşmayı tercih ediyor. Her ne kadar tüm isteklerinizi karşılayacaklarının garantisi olmamakla birlikte sadece ilk seneliğine de olsa size bu konuda yardımcı olmaya çalışıyorlar. İkinci sene size kalmış.
+* Bursla gelmenin bir çok avantajı var. Örneğin; ilk sene neredeyse bütün burs sahiplerine ev ayarlandı. Normalde evinizi kendiniz bulmanız gerekli ve İsviçre’de uygun fiyata düzgün bir ev bulmak baya zor olabiliyor. Üstelik tamamen yabancı, Almanca konuşulan bir ülkede yol yordam bilmeden ev aramak nasıl bir işkencedir tahmin etmeye çalışın. Bu arada ev diyorum ama tek bir odayı kastediyorum. İsviçre’de konut kiraları çok yüksek ve bu yüzden öğrenciler hatta bir çok çalışan insan ev paylaşmayı tercih ediyor. Her ne kadar tüm isteklerinizi karşılayacaklarının garantisi olmamakla birlikte sadece ilk seneliğine de olsa size bu konuda yardımcı olmaya çalışıyorlar. İkinci sene size kalmış.
 
 * Bir diğer avantaj ise sağlık sigortasına para ödemiyorsunuz. Burada gerçekten pahalı bir mesele bu. Hele ki sadece bursla geçinmek zorundaysanız sağlık sigortasına para vermemek güzel olabiliyor. Sonuç olarak hem hangisini seçsem diye araştırma derdiniz hem de ekstra masraf gibi bir derdiniz olmuyor. Bu arada bir diğer not: sigortanız olsa bile Türkiye’deki gibi çok kapsamlı bir şey değil. Çok fazla hasta olmamaya, gerçekten acil olmadıkça doktora gitmemeye bakın. Mümkünse işinizi Türkiye’de halledin. Mesela gözlük alacaksanız Türkiye’den alın. Bilet + gözlük daha ucuza gelir ve üstüne sevdiklerinizi görmüş olursunuz. 
 
